tests/fixtures/invalid/non_char_array_compound_literal_string_initializer.c
int main(void) {
    int *values = (int[]){"nope"};
    return values[0];
}
